<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title_email_page"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#01C2D4"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/add_contacts"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <ListView
        android:id="@+id/list_from_contacts"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/ll_bottom_from_contacts"
        android:layout_below="@+id/title_email_page"
        android:background="@android:color/white"
        android:scrollingCache="false" />

    <LinearLayout
        android:id="@+id/ll_bottom_from_contacts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="#3c599f"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/select_all_email_cont_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/track_list_selector"
            android:padding="10dp"
            android:text="@string/select_all" />

        <Button
            android:id="@+id/unselect_all_email_cont_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/track_list_selector"
            android:padding="10dp"
            android:text="@string/unselect_all" />

        <Button
            android:id="@+id/done_email_cont_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/track_list_selector"
            android:padding="10dp"
            android:text="@string/done" />
    </LinearLayout>

</RelativeLayout>