<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_bg" >

    <TextView
        android:id="@+id/title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/gps_tracker"
        android:textColor="#C0C8FB"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:id="@+id/ll_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg"
            android:drawableLeft="@drawable/new_mail_icon"
            android:drawablePadding="10dp"
            android:ems="12"
            android:gravity="left|bottom|center_vertical"
            android:hint="@string/enter_e_mail_id"
            android:inputType="textEmailAddress"
            android:padding="4dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#C0C8FB" >
        </EditText>

        <EditText
            android:id="@+id/password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/edit_bg"
            android:drawableLeft="@drawable/new_password_icon"
            android:drawablePadding="10dp"
            android:ems="12"
            android:gravity="left|bottom|center_vertical"
            android:hint="@string/enter_password"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:padding="4dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#C0C8FB" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_log_btns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_layout"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/login_logpage_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/new_login_btn" />

        <!--
            <com.facebook.widget.LoginButton
            android:id="@+id/authButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />
        -->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_up_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/Sign_Up_Text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_apos_t_have_an_account_yet_"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Sign_UP_Text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_sign_up"
            android:textColor="#C0C8FB"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_up_text"
        android:layout_alignLeft="@+id/title_txt"
        android:layout_marginLeft="20dp"
        android:text="@string/forget_password"
        android:textColor="@android:color/white"
        android:textStyle="italic" />

</RelativeLayout>